<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView1"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:contentDescription="@string/forgot_password"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/forgot_password_statement"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:background="@drawable/edittext_drawable"
            android:contentDescription="@string/email"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/dp15" />


    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp70"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/button_disable"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20" />

</LinearLayout>

