<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView1"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp50"
            android:background="@drawable/edittext_drawable"
            android:contentDescription="@string/email"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/dp15" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp15"
            android:background="@drawable/edittext_drawable"
            android:contentDescription="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remember_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/remember_me"
                app:buttonTint="@color/button_active" />

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/forgot_password"
                android:padding="@dimen/dp10"
                android:paddingBottom="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp70"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/button_disable"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20" />
</LinearLayout>

